makes BackToTop have z-index of 2 to prevent overlap

--- a/src/components/navigation/BackToTop.css
+++ b/src/components/navigation/BackToTop.css
@@ -13,6 +13,7 @@
     right: 40px;
     transition: var(--transition);
     width: 60px;
+    z-index: 2;
 }
 
 .BackToTop-Visible{
